--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   url_launcher: ^6.1.6
   map_launcher: ^2.4.0
   flutter_svg: ^1.0.3
+  flutter_dotenv: ^5.0.2
+  app_settings: ^4.1.3
   # device_preview: ^0.8.0
 
 dev_dependencies:
@@ -72,6 +74,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/envs/dev.env
 
 
   fonts:
