--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_dotenv: ^5.0.2
   app_settings: ^4.1.3
+  pull_to_refresh: ^2.0.0
   # device_preview: ^0.8.0
 
 dev_dependencies:
