--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.16.2 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,16 +38,26 @@ dependencies:
   get: 4.6.1
   sizer: ^2.0.15
   shared_preferences: ^2.0.6
-  logger: ^1.1.0  
-  global_configuration: ^2.0.0-nullsafety.1
+  # logger: ^1.1.0  
+  # global_configuration: ^2.0.0-nullsafety.1
   location: ^4.3.0
-  geocoding: ^2.0.0
+  # geocoding: ^2.0.0
   url_launcher: ^6.1.6
-  map_launcher: ^2.4.0
+  # map_launcher: ^2.4.0
   flutter_svg: ^1.0.3
   flutter_dotenv: ^5.0.2
   app_settings: ^4.1.3
   pull_to_refresh: ^2.0.0
+  geocoding: ^2.1.0
+  map_launcher: ^2.5.0+1
+  dio: ^5.2.1+1
+  web_socket_channel: ^2.4.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  hive_generator: ^1.1.0
+  build_runner: ^2.1.5
+  cached_network_image: ^3.2.3
+  pinput: ^2.2.21
   # device_preview: ^0.8.0
 
 dev_dependencies:
@@ -75,7 +85,6 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/envs/dev.env
 
 
   fonts:
