--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   # logger: ^1.1.0  
   # global_configuration: ^2.0.0-nullsafety.1
   location: ^4.3.0
+  go_router: ^6.2.0
   # geocoding: ^2.0.0
   url_launcher: ^6.1.6
   # map_launcher: ^2.4.0
@@ -69,6 +70,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   flutter_cache_manager: ^3.3.0
+  # go_router: ^9.0.3
   # device_preview: ^0.8.0
 
 dev_dependencies:
